# tableshot

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: competitor-data.md  results.json  results.md  run_benchmarks.py
benchmarks/outputs/: empty_page.md  multi_page.md  multi_table.md  simple_bordered.md  single_row.md  special_chars.md  wide_table.md
src/tableshot/: __init__.py  __main__.py  formatter.py  input_handler.py  pipeline.py  server.py  utils.py
src/tableshot/backends/: ml_backend.py  pdfplumber_backend.py
tests/: conftest.py  generate_fixtures.py  test_formats.py  test_input_handler.py  test_ml_backend.py  test_pipeline.py  test_server.py
